<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:minHeight="@android:dimen/thumbnail_height"
    tools:context="com.example.piano.invoicetotalapp_itc162_classproject.InvoiceTotalApp_itc162_ClassProject_Activity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/appTitle"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="133dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:text="@string/subtotalLabel"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/totalAmount"
        app:layout_constraintEnd_toStartOf="@+id/inputSubtotal"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputSubtotal"
        android:layout_width="@dimen/width150"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/holo_orange_dark"
        android:ems="8"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/discountPercentLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/subtotalLabel"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintVertical_bias="0.882" />

    <TextView
        android:id="@+id/discountPercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="87dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/discountPercentLabel"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/inputDiscountPercent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotalLabel" />

    <EditText
        android:id="@+id/inputDiscountPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="45dp"
        android:background="@android:color/holo_orange_dark"
        android:ems="8"
        android:inputType="numberDecimal"
        android:text="@string/inputDiscountPercent"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="@+id/showDiscountAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/discountPercentLabel"
        app:layout_constraintTop_toTopOf="@+id/inputSubtotal"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/discountAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="87dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/discountAmountLabel"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/showDiscountAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discountPercentLabel" />

    <TextView
        android:id="@+id/showDiscountAmount"
        android:layout_width="@dimen/width80"
        android:layout_height="@dimen/height"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="164dp"
        android:background="@android:color/holo_orange_dark"
        android:text=""
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/discountAmountLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:text="@string/totalLabel"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/totalAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discountAmountLabel" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="0dp"
        android:layout_height="@dimen/height"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_orange_dark"
        android:text=""
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalLabel"
        app:layout_constraintTop_toBottomOf="@+id/showDiscountAmount" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="19dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="Clear"
        android:text="Clear All"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalAmount" />

</android.support.constraint.ConstraintLayout>
